--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Internship assignment.",
   "main": "index.js",
   "scripts": {
-   "start" : "nodemon ./server/server.js "
+    "start": "nodemon ./server/server.js "
   },
   "author": "Kamalesh Biswas",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.619.0",
+    "busboy": "^0.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "mongoose": "^5.9.1",
     "nodemon": "^2.0.2"
   }
